feat: KPI Dashboard, Analytics & Team Management with UI/UX Design System
- KPI Dashboard with real-time metrics
- Analytics page with date range filtering and export
- Team Management with leaderboard
- Deal Pipeline funnel visualization
- Design tokens and BEM naming throughout
- ViewContext for AI page awareness
- Staggered animations on KPI cards

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@ai-sdk/anthropic": "^2.0.53",
     "@ai-sdk/react": "^2.0.106",
     "@anthropic-ai/sdk": "^0.71.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -40,11 +43,13 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@tanstack/react-query": "^5.90.11",
     "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.7",
     "ai": "^5.0.106",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gpt-tokenizer": "^3.4.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
@@ -55,6 +60,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.5.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
