feat: Complete Phase 2 Fluid OS migration (Inbox, Settings, Kanban) & Add Master Plan

--- a/vercel 3.json
+++ b/vercel 3.json
@@ -5,13 +5,10 @@
   "headers": [
     {
       "source": "/api/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "no-store, max-age=0" }
-      ]
+      "headers": [{ "key": "Cache-Control", "value": "no-store, max-age=0" }]
     }
   ],
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
-
