--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "gpt-tokenizer": "^3.4.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
