--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "twilio": "^5.10.7",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
